2004-10-04  Dan Winship  <danw@novell.com>

	* mail/mail-stub-exchange.c (send_message): Remove code that was
	setting the message to use HTTP 1.0, which isn't needed with
	libsoup 2.2, and which was causing 65685.

2004-09-24  Christophe Merlet  <redfox@redfoxcenter.org>

        * configure.in: Added 'fr' (French) to ALL_LINGUAS.

2004-09-22  Craig Jeffares <cjeffares@novell.com>

        * configure.in: Added 'it, zh_TW & zh_CN' to ALL_LINGUAS.

2004-09-17  Dan Winship  <danw@novell.com>

	Pull up changes from HEAD for 2.0.1 (all from Sushma)

	* storage/exchange-hierarchy-favorites.c 
	(exchange_hierarchy_favorites_add_folder): Checking for 
	permanent_uri being NULL. Fixes #65850

	* storage/exchange-config-listener.c (account_changed):
	Removing the just the e-sources if the user changes the 
	account name, and not forgetting the password and 
	displaying account removal warning message.
	Fixes #64188

	* addressbook/e-book-backend-gal.c (build_query):
	Added check to not to return all contacts, when user 
	tries to get the mail ID from GAL,  while composing mail,
	by perfoming empty query in "Select Contacts form Addressbook"
	dialog. Fixes #41647 
	
	* addressbook/e-book-backend-exchange.c
	(e_book_backend_exchange_remove): Moved unused variables
	to kill warnings. 

2004-09-13  Dan Winship  <danw@novell.com>

	* configure.in: 2.0.0!

	* NEWS: Update. (Remove beta series notes and replace with
	"changes from 1.4 to 2.0")

2004-09-13  Baris Cicek <baris@teamforce.name.tr>

	* configure.in: Added 'tr' to ALL_LINGUAS.

2004-09-06  Sushma Rai  <rsushma@novell.com>

	* storage/xc-commands.c: Disabled menu options for
	move and copy folders.  See #62440

2004-09-08  Arafat Medini  <lumina@arabeyes.org>

	* ar.po: Added Arabic locale "ar" to ALL_LINGUAS.

2004-09-04  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS.

2004-09-03  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added Danish (da) to ALL_LINGUAS.
